--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="logo.png" alt="TS Logo">
+            <img src="D:\Computer project\img\logo.png" alt="TS Logo">
             
         </div>
         <div><h1>Student Management System</h1></div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="login.html" >Students</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="login.html" >Student</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
        <a href="login.html" class="btn">Login</a>
     </div>
     <div class="hero-image">
-        <img src="1.png" alt="Student Management">
+        <img src="D:\Computer project\img\1.PNG" alt="Student Management">
     </div>
 </section>
 
@@ -42,17 +42,17 @@
     
     <div class="student-container">
         <div class="student-card">
-            <img src="stu1.jpg" alt="Student 1">
+            <img src="D:\Computer project\img\stu1.PNG" alt="Student 1">
             <h3>Yogesh raut</h3>
             <p>Won't get Bike</p>
         </div>
         <div class="student-card">
-            <img src="stu2.jpg" alt="Student 2">
+            <img src="D:\Computer project\img\stu2.PNG" alt="Student 2">
             <h3>Sahil</h3>
             <p>Artist</p>
         </div>
         <div class="student-card">
-            <img src="stu3.jpg" alt="Student 3">
+            <img src="D:\Computer project\img\stu3.PNG" alt="Student 3">
             <h3>Ritesh</h3>
             <p>Gaint</p>
         </div>
