--- a/login.html
+++ b/login.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <!-- Header Section -->
+    <header>
+        <div class="logo">
+            <img src="D:\Computer project\img\logo.png" alt="TS Logo">
+            <a href="index.html"></a>
+        </div>
+        <div><h1>Student Management System</h1></div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="login-container">
         <h2>Login</h2>
@@ -26,6 +39,13 @@
             <button type="submit">Login</button>
         </form>
     </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 TS. All Rights Reserved.</p>
+    </footer>
+
 
 </body>
 </html>
