--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <a href="login.html" class="btn">Login</a>
     </div>
     <div class="hero-image">
-        <img src="D:\Computer project\img\1.PNG" alt="Student Management">
+        <img src="img\1.PNG" alt="Student Management">
     </div>
 </section>
 
@@ -42,17 +42,17 @@
     
     <div class="student-container">
         <div class="student-card">
-            <img src="D:\Computer project\img\stu1.PNG" alt="Student 1">
+            <img src="img\stu1.PNG" alt="Student 1">
             <h3>Yogesh raut</h3>
             <p>Won't get Bike</p>
         </div>
         <div class="student-card">
-            <img src="D:\Computer project\img\stu2.PNG" alt="Student 2">
+            <img src="img\stu2.PNG" alt="Student 2">
             <h3>Sahil</h3>
             <p>Artist</p>
         </div>
         <div class="student-card">
-            <img src="D:\Computer project\img\stu3.PNG" alt="Student 3">
+            <img src="img\stu3.PNG" alt="Student 3">
             <h3>Ritesh</h3>
             <p>Gaint</p>
         </div>
