--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Student Management System</title>
-    <link rel="stylesheet" type="text/css" href="D:\Computer project\style1.css">
+    <link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 <body>
         <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="D:\Computer project\img\logo.png" alt="TS Logo">
+            <img src="img\logo.png" alt="TS Logo">
             <a href="index.html"></a>
         </div>
         <div><h1>Student Management System</h1></div>
