--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="img\logo.png" alt="TS Logo">
+            <img src="logo.png" alt="TS Logo">
             
         </div>
         <div><h1>Student Management System</h1></div>
