--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     <div class="student-container">
         <div class="student-card">
             <img src="img\stu1.PNG" alt="Student 1">
-            <h3>Yogesh raut</h3>
+            <h3><a href="https://i.ibb.co/rGfqNWt6/small-kids-first-electric-6v-ride-on-bike-1024x967.jpg">Yogesh raut</a></h3>
             <p>Won't get Bike</p>
         </div>
         <div class="student-card">
             <img src="img\stu2.PNG" alt="Student 2">
-            <h3>Sahil</h3>
+            <h3> <a href="https://i.ibb.co/0Vf9RKtX/img1.webp">Sahil</a></h3>
             <p>Artist</p>
         </div>
         <div class="student-card">
             <img src="img\stu3.PNG" alt="Student 3">
-            <h3>Ritesh</h3>
+            <h3><a href="https://i.ibb.co/35TBtM8P/img2.jpg">Ritesh</a></h3>
             <p>Gaint</p>
         </div>
     </div>
