--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="img\logo.png" alt="TS Logo">
+            <img src="logo.png" alt="TS Logo">
             <a href="index.html"></a>
         </div>
         <div><h1>Student Management System</h1></div>
